--- a/index.html
+++ b/index.html
@@ -4,27 +4,22 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>ThingSpeak Channel 1 Dashboard</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
+	<!-- Removed external font for minimal academic style -->
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<style>
 		:root {
-			--bg: #0c1117;
-			--panel: #111824;
-			--accent: #12c2a3;
-			--accent-2: #f18f01;
-			--text: #e8edf4;
-			--muted: #9fb3c8;
-			--card: #131c2a;
+			--bg: #ffffff;
+			--panel: #ffffff;
+			--text: #222222;
+			--muted: #666666;
+			--border: #e5e5e5;
+			--accent: #222222;
 		}
 		* { box-sizing: border-box; }
 		body {
 			margin: 0;
-			font-family: 'Space Grotesk', sans-serif;
-			background: radial-gradient(circle at 20% 20%, rgba(18,194,163,0.08), transparent 35%),
-									radial-gradient(circle at 80% 30%, rgba(241,143,1,0.08), transparent 30%),
-									var(--bg);
+			font-family: Georgia, "Times New Roman", Times, serif;
+			background: var(--bg);
 			color: var(--text);
 			min-height: 100vh;
 			padding: 24px;
@@ -55,35 +50,47 @@
 		input:focus, select:focus { border-color: var(--accent); }
 		button {
 			cursor: pointer;
-			background: linear-gradient(135deg, var(--accent), var(--accent-2));
-			border: none;
-			color: #0b1017;
+			background: #ffffff;
+			border: 1px solid var(--border);
+			color: var(--text);
 			font-weight: 600;
-			transition: transform 120ms ease, box-shadow 120ms ease;
-			box-shadow: 0 6px 16px rgba(18,194,163,0.25);
+			transition: background 120ms ease;
+			box-shadow: none;
+			border-radius: 4px;
 		}
-		button:hover { transform: translateY(-1px); }
-		button:active { transform: translateY(0); }
+		button:hover { background: #f6f6f6; }
+		button:active { background: #eeeeee; }
 		.grid {
 			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-			gap: 14px;
+			grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+			gap: 12px;
+		}
+		#chartsGrid {
+			grid-template-columns: repeat(4, 1fr);
+			gap: 8px;
 		}
 		.card {
-			background: var(--card);
-			border: 1px solid rgba(255,255,255,0.05);
-			border-radius: 14px;
-			padding: 14px 16px;
-			box-shadow: 0 12px 30px rgba(0,0,0,0.25);
+			background: #ffffff;
+			border: 1px solid var(--border);
+			border-radius: 6px;
+			padding: 12px 14px;
+			box-shadow: none;
 		}
-		.card h3 { margin: 0 0 6px; font-size: 1rem; color: var(--muted); }
-		.value { font-size: 1.4rem; font-weight: 600; }
-		.muted { color: var(--muted); font-size: 0.9rem; }
+		.card h3 { margin: 0 0 6px; font-size: 0.95rem; color: var(--muted); font-weight: 600; }
+		.value { font-size: 1.2rem; font-weight: 600; color: var(--text); }
+		.muted { color: var(--muted); font-size: 0.85rem; }
+		#chartsGrid .card {
+			padding: 8px 10px;
+		}
+		#chartsGrid .card h3 {
+			margin: 0 0 4px;
+			font-size: 0.8rem;
+		}
 		.status { margin-top: 8px; }
-		.status span { padding: 6px 10px; border-radius: 999px; font-size: 0.85rem; }
-		.ok { background: rgba(18,194,163,0.16); color: var(--accent); }
-		.err { background: rgba(241,143,1,0.16); color: var(--accent-2); }
-		.chart-wrap { margin-top: 18px; background: var(--panel); border-radius: 14px; padding: 14px; }
+		.status span { padding: 0; border-radius: 0; font-size: 0.9rem; }
+		.ok { color: var(--text); }
+		.err { color: #8a1c1c; }
+		.chart-wrap { margin-top: 18px; background: #ffffff; border: 1px solid var(--border); border-radius: 6px; padding: 12px; }
 		.footer { margin-top: 18px; color: var(--muted); font-size: 0.85rem; }
 		.modal {
 			display: none;
@@ -96,14 +103,14 @@
 		}
 		.modal.show { display: flex; }
 		.modal-content {
-			background: var(--panel);
-			border: 1px solid rgba(255,255,255,0.08);
-			border-radius: 14px;
-			padding: 24px;
-			max-width: 400px;
-			box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+			background: #ffffff;
+			border: 1px solid var(--border);
+			border-radius: 6px;
+			padding: 20px;
+			max-width: 420px;
+			box-shadow: none;
 		}
-		.modal-content h2 { margin: 0 0 16px; color: var(--accent); font-size: 1.3rem; }
+		.modal-content h2 { margin: 0 0 12px; color: var(--text); font-size: 1.2rem; }
 		.stat-row {
 			display: flex;
 			justify-content: space-between;
@@ -118,15 +125,14 @@
 			margin-top: 16px;
 			width: 100%;
 			padding: 10px 12px;
-			background: linear-gradient(135deg, var(--accent), var(--accent-2));
-			border: none;
-			color: #0b1017;
-			border-radius: 10px;
+			background: #ffffff;
+			border: 1px solid var(--border);
+			color: var(--text);
+			border-radius: 4px;
 			font-weight: 600;
 			cursor: pointer;
-			transition: transform 120ms ease;
 		}
-		.modal-close:hover { transform: translateY(-1px); }
+		.modal-close:hover { background: #f6f6f6; }
 	</style>
 </head>
 <body>
@@ -364,19 +370,19 @@
 					datasets: [{
 						label,
 						data,
-						borderColor: '#12c2a3',
-						backgroundColor: 'rgba(18,194,163,0.15)',
-						tension: 0.25,
-						fill: true,
-						pointRadius: 3,
+						borderColor: '#222222',
+						backgroundColor: 'transparent',
+						tension: 0,
+						fill: false,
+						pointRadius: 2,
 						spanGaps: true
 					}]
 				},
 				options: {
-					plugins: { legend: { labels: { color: '#e8edf4' } } },
+					plugins: { legend: { labels: { color: '#222222' } } },
 					scales: {
-						x: { ticks: { color: '#9fb3c8' }, grid: { color: 'rgba(255,255,255,0.05)' } },
-						y: { ticks: { color: '#9fb3c8' }, grid: { color: 'rgba(255,255,255,0.05)' } }
+						x: { ticks: { color: '#444444' }, grid: { color: '#eeeeee' } },
+						y: { ticks: { color: '#444444' }, grid: { color: '#eeeeee' } }
 					}
 				}
 			});
@@ -398,7 +404,7 @@
 				const series = feeds.map(f => parseFloat(f[key])).map(v => (Number.isFinite(v) ? v : null));
 				const card = document.createElement('div');
 				card.className = 'card';
-				card.innerHTML = `<h3>${fieldNames[key]}${unit ? ` [${unit}]` : ''}</h3><canvas height="110"></canvas>`;
+				card.innerHTML = `<h3>${fieldNames[key]}${unit ? ` [${unit}]` : ''}</h3><canvas height="80"></canvas>`;
 				grid.appendChild(card);
 				const ctx = card.querySelector('canvas').getContext('2d');
 				const c = new Chart(ctx, {
@@ -407,21 +413,21 @@
 						labels,
 						datasets: [{
 							data: series,
-							borderColor: '#12c2a3',
-							backgroundColor: 'rgba(18,194,163,0.12)',
-							tension: 0.25,
-							fill: true,
+							borderColor: '#222222',
+							backgroundColor: 'transparent',
+							tension: 0,
+							fill: false,
 							pointRadius: 0,
 							spanGaps: true
 						}]
 					},
 					options: {
 						plugins: { legend: { display: false } },
-						elements: { line: { borderWidth: 2 } },
+						elements: { point: { radius: 0 }, line: { borderWidth: 1 } },
 						maintainAspectRatio: false,
 						scales: {
-							x: { ticks: { color: '#9fb3c8', maxTicksLimit: 4 }, grid: { color: 'rgba(255,255,255,0.05)' } },
-							y: { ticks: { color: '#9fb3c8', maxTicksLimit: 4 }, grid: { color: 'rgba(255,255,255,0.05)' } }
+							x: { ticks: { color: '#444444', maxTicksLimit: 4 }, grid: { color: '#eeeeee' } },
+							y: { ticks: { color: '#444444', maxTicksLimit: 4 }, grid: { color: '#eeeeee' } }
 						}
 					}
 				});
