Add plant emoji to dashboard header

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </head>
 <body>
 	<header>
-		<h1>Plant Dashboard – Live View</h1>
+		<h1>🌱 Plant Dashboard – Live View</h1>
 		<div class="controls">
 			<select id="channelSelect" aria-label="Choose plant">
 				<option value="channel1" selected>Plant 1</option>
