Add option to select all data in result count

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 				<option value="10">Last 10</option>
 				<option value="20" selected>Last 20</option>
 				<option value="40">Last 40</option>
+				<option value="8000">All Data</option>
 			</select>
 			<button id="refreshBtn">Refresh Now</button>
 			<button id="toggleViewBtn" title="Toggle single/multi plot view">Show All</button>
